# PhysIQ

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.frontend  Makefile  README.md  TECHNICAL_OVERVIEW.md  docker-compose.override.yml  docker-compose.yml  generate_ssh.py  parse_tfrecord.py  pyproject.toml  render_results.py  requirements.txt  rollout.py  rollout_ssh.py  train.py
api/: main.py  state.py
api/routes/: dataset.py  generate.py  physics.py  results.py  rollout.py  status.py  train.py
app/: README.md  index.html  metadata.json  package-lock.json  package.json  server.ts  vite.config.ts
app/src/: App.tsx  index.css
app/src/components/: CandidateCard.tsx  ClothPlot3D.tsx  MeshPlot.tsx  OptimizationChart.tsx  PipelineSteps.tsx  Sidebar.tsx
app/src/pages/: Dashboard.tsx  DatasetStudio.tsx  ExperimentTracking.tsx  Generate.tsx  PipelineView.tsx  Predict.tsx  Train.tsx  Visualize.tsx
app/src/utils/: fetch.ts
confidence/: CMakeLists.txt  __init__.py  benchmark.py  build_index.py  index.py  kdtree.cpp  kdtree.h  kdtree_bind.cpp
data/: parse_flag_tfrecord.py  test.dat.dvc  test.npz.dvc  test_pressure.dat.dvc  train.dat.dvc  train.npz.dvc  train_pressure.dat.dvc  valid.dat.dvc  valid.npz.dvc  valid_pressure.dat.dvc
dataset/: flag_dataset.py  fpc.py
docker/: nginx.conf
docs/: CODEBASE_WALKTHROUGH.md  DATA_FLOW_DIAGRAM.md  DATA_PIPELINE_UPGRADE_PLAN.md  GENERATE_CURRENT_STATE_AND_ENHANCEMENTS.md  INTERVIEW_REFERENCE.md  INTERVIEW_WALKTHROUGH.md  NUMERICAL_METHODS.md  PIPELINE_BILLION_SCALE.md  PIPELINE_DETAILED.md  SUBSYSTEM_API.md  SUBSYSTEM_CONFIDENCE.md  SUBSYSTEM_DATA.md  SUBSYSTEM_GENERATOR.md  SUBSYSTEM_PREDICTOR.md  TECHNICAL_REFERENCE.md
docs/demo/: DEMO_SCRIPT.md  DEMO_STEPS.md
docs/superpowers/plans/: 2026-04-07-confidence-score.md  2026-04-07-flag-simple-domain.md  2026-04-07-pressure-field.md  2026-04-11-gnn-scorer-deep-mode.md
docs/superpowers/specs/: 2026-04-07-confidence-score-design.md  2026-04-07-flag-simple-domain-design.md  2026-04-07-pressure-field-design.md  2026-04-11-gnn-scorer-deep-mode-design.md
docs/technical/: 00_INDEX.md  01_overview.md  02_domains_datasets.md  03_system_architecture.md  04_gnn_architecture.md  05_confidence_scoring.md  06_inverse_design.md  07_poisson_correction_lu.md  08_data_pipeline.md  09_design_patterns_solid.md  10_scalability.md  11_research_connections.md  12_numerical_methods.md  13_docker_deployment.md  14_design_decisions_tradeoffs.md  15_equivariance.md  16_data_access_and_confidence.md  17_tfrecord_to_graph_pipeline.md  18_inverse_design_pipeline.md  19_generate_full_flow.md  20_inverse_design_backprop.md  21_training_backprop.md
extensions/confidence/: ood_detector.py
extensions/generative/: cloth_extractor.py  cvae_cfd.py  cvae_cloth.py  drag_surrogate.py  gnn_scorer.py  inverse_design.py  mesh_generator.py  shape_extractor.py  train_cvae.py
ingest/: __init__.py  pipeline.py  protocols.py
ingest/adapters/: __init__.py  openfoam.py  tfrecord.py
ingest/stages/: __init__.py  harvest.py  index.py  normalise.py  validate.py  write.py
model/: blocks.py  embedding.py  flag_simulator.py  model.py  simulator.py
physics/: __init__.py  poisson_pressure.py
result/: retention.py
runs/: embedding_index_cylinderflow.pkl
scripts/: migrate_pkl_to_hdf5.py  regenerate_dat.py
storage/: __init__.py  factory.py  hdf5_repository.py  pkl_repository.py  protocols.py  zarr_archive.py
tests/: test_confidence_index.py  test_drag_surrogate.py  test_embedding.py  test_flag_dataset.py  test_flag_simulator.py  test_fpc_dataset.py  test_free_bits_kl.py  test_generate_fixes.py  test_gnn_scorer.py  test_mesh_lookup.py  test_model_output_size.py  test_param_space_ood.py  test_parse_flag.py  test_parse_pressure.py  test_phase1_pipeline.py  test_phase2_storage.py  test_phase2_zarr.py  test_phase3_ingest.py  test_poisson_pressure.py  test_simulator_pressure.py  test_tns_sage.py
utils/: normalization.py
